# Civilization

./: .gitignore  ActionCardStruct_8hpp_source.html  BarabarianVillage_8hpp_source.html  BarbarianVillage_8hpp_source.html  Barbarian_8hpp_source.html  Binary_8hpp_source.html  Button_8hpp_source.html  CMakeLists.txt  Caravan_8hpp_source.html  CardStruct_8hpp_source.html  Card_8hpp_source.html  CardsEnum_8hpp_source.html  Chat_8hpp_source.html  CityStateEnum_8hpp_source.html  City_8hpp_source.html  ClientGameEngine_8hpp_source.html  ClientManager_8hpp_source.html  ControlPawn_8hpp_source.html  ElementEnum_8hpp_source.html  Element_8hpp_source.html  FieldLevel_8hpp_source.html  GameEngine_8hpp_source.html  GameState_8hpp_source.html  GameWindow_8hpp_source.html  GraphicCard_8hpp_source.html  Hexagon_8hpp_source.html  HudTextureType_8hpp_source.html  Map_8hpp_source.html  MenuWindow_8hpp_source.html  Network_8hpp_source.html  PerlinNoise_8hpp_source.html  PlayerState_8hpp_source.html  Player_8hpp_source.html  PopUpWindow_8hpp_source.html  PriorityCardStruct_8hpp_source.html  README.md  ResourceEnum_8hpp_source.html  Resource_8hpp_source.html  RuleArgsStruct_8hpp_source.html  Rules_8cpp.html  (+6213 more)
.github/workflows/: CI.yml  cmake.yml  develop-pipeline.yml  main.yml  nightly.yml
Rules/: graphic-elements.md  rules-summary.md  rules.md
cmake/: CodeCoverage.cmake  GenerateDiaHeader.cmake
code-coverage/: index-sort-f.html  index-sort-l.html  index.html
code-coverage/client/: Button.cpp.func-sort-c.html  Button.cpp.func.html  Button.cpp.gcov.html  Chat.cpp.func-sort-c.html  Chat.cpp.func.html  Chat.cpp.gcov.html  ClientGameEngine.cpp.func-sort-c.html  ClientGameEngine.cpp.func.html  ClientGameEngine.cpp.gcov.html  GameWindow.cpp.func-sort-c.html  GameWindow.cpp.func.html  GameWindow.cpp.gcov.html  GraphicCard.cpp.func-sort-c.html  GraphicCard.cpp.func.html  GraphicCard.cpp.gcov.html  MenuWindow.cpp.func-sort-c.html  MenuWindow.cpp.func.html  MenuWindow.cpp.gcov.html  PopUpWindow.cpp.func-sort-c.html  PopUpWindow.cpp.func.html  PopUpWindow.cpp.gcov.html  TextureDisplayer.cpp.func-sort-c.html  TextureDisplayer.cpp.func.html  TextureDisplayer.cpp.gcov.html  ValidateBoxesButtons.cpp.func-sort-c.html  ValidateBoxesButtons.cpp.func.html  ValidateBoxesButtons.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
code-coverage/server/: GameEngine.cpp.func-sort-c.html  GameEngine.cpp.func.html  GameEngine.cpp.gcov.html  Server.cpp.func-sort-c.html  Server.cpp.func.html  Server.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
code-coverage/shared/: Barbarian.cpp.func-sort-c.html  Barbarian.cpp.func.html  Barbarian.cpp.gcov.html  BarbarianVillage.cpp.func-sort-c.html  BarbarianVillage.cpp.func.html  BarbarianVillage.cpp.gcov.html  Binary.cpp.func-sort-c.html  Binary.cpp.func.html  Binary.cpp.gcov.html  Caravan.cpp.func-sort-c.html  Caravan.cpp.func.html  Caravan.cpp.gcov.html  Card.cpp.func-sort-c.html  Card.cpp.func.html  Card.cpp.gcov.html  City.cpp.func-sort-c.html  City.cpp.func.html  City.cpp.gcov.html  ControlPawn.cpp.func-sort-c.html  ControlPawn.cpp.func.html  ControlPawn.cpp.gcov.html  Hexagon.cpp.func-sort-c.html  Hexagon.cpp.func.html  Hexagon.cpp.gcov.html  Map.cpp.func-sort-c.html  Map.cpp.func.html  Map.cpp.gcov.html  PerlinNoise.cpp.func-sort-c.html  PerlinNoise.cpp.func.html  PerlinNoise.cpp.gcov.html  Player.cpp.func-sort-c.html  Player.cpp.func.html  Player.cpp.gcov.html  Resource.cpp.func-sort-c.html  Resource.cpp.func.html  Resource.cpp.gcov.html  Rules.cpp.func-sort-c.html  Rules.cpp.func.html  Rules.cpp.gcov.html  Serialization.cpp.func-sort-c.html  (+8 more)
docs/: Doxyfile  DoxygenLayout.xml  IA.md  continuous-integration.md  credits.md  development-process.md  diagram-explanation.md  diagrams.md  home-page.md  main.md  multithreading-network.md  rendering.md  rules.md  state-diagram.dia
docs/rules/: graphic-elements.md  recap-of-specific-actions.md  recap-of-the-rules.md  rules-summary.md  rules.md
include/: class-diagram.dia
resources/hud/: action-card.json  data-number.json  files.json  priority-card.json  (+1 more)
ressources/: valgrindSuppFile.supp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+59 more)
src/: class-diagram.dia  client.dia  sayHello.dia  state-diagram.dia  state.dia
src/client/: ActionCardDisplay.cpp  Button.cpp  CMakeLists.txt  Chat.cpp  ClientGameEngine.cpp  ClientManager.cpp  ElementDisplay.cpp  ElementDisplayer.cpp  GameWindow.cpp  GraphicCard.cpp  HexDisplay.cpp  HudDisplay.cpp  MapDisplay.cpp  MenuWindow.cpp  PopUpWindow.cpp  PriorityCardDisplay.cpp  Tchat.cpp  TextureData.cpp  TextureDisplayer.cpp  ValidateBoxesButtons.cpp  main.cpp
src/client/client/: Exemple.cpp  sayHello.cpp
src/server/: CMakeLists.txt  GameEngine.cpp  Server.cpp  main.cpp
src/shared/: Barbarian.cpp  BarbarianVillage.cpp  Binary.cpp  CMakeLists.txt  Caravan.cpp  Card.cpp  City.cpp  ControlPawn.cpp  Element.cpp  ElementData.cpp  Hexagon.cpp  Map.cpp  PerlinNoise.cpp  Player.cpp  Resource.cpp  Rules.cpp  Serialization.cpp  sayHello.cpp
src/shared/state/: Exemple.cpp
test/: CMakeLists.txt
test/client/: CMakeLists.txt  test_client_dummy.cpp  test_hello.cpp  test_texture.cpp  test_textureDisplayer.cpp
test/server/: CMakeLists.txt  test_network.cpp
test/shared/: CMakeLists.txt  test_barbarian.cpp  test_barbarianvillage.cpp  test_card.cpp  test_city.cpp  test_controlpawn.cpp  test_hello.cpp  test_hexagon.cpp  test_map.cpp  test_resource.cpp  test_rules.cpp  test_serialize.cpp
(+23 files in other folders)
